--- a/package.json
+++ b/package.json
@@ -34,11 +34,15 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/jsonwebtoken": "^9.0.3",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status": "^1.6.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.1",
     "winston": "^3.10.0",
     "winston-daily-rotate-file": "^4.7.1",
